--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "type": "git",
     "url": "git+https://github.com/plemiszki/flash-cards.git"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode development --watch",
+    "heroku-postbuild": "webpack --mode production"
+  },
   "dependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^6.1.5",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015-without-strict": "0.0.4",
     "babel-preset-react": "^6.24.1",
     "handy-tools": "^0.1.21",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "webpack": "^1.15.0"
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   }
 }
