--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015-without-strict": "0.0.4",
     "babel-preset-react": "^6.24.1",
-    "handy-tools": "^0.1.21",
+    "handy-tools": "1.0.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "webpack": "^4.16.5",
