--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015-without-strict": "0.0.4",
     "babel-preset-react": "^6.24.1",
-    "handy-tools": "1.10.0",
+    "handy-tools": "1.11.0",
+    "lodash": "^4.17.11",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "5.0.7",
