--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015-without-strict": "0.0.4",
     "babel-preset-react": "^6.24.1",
-    "handy-tools": "1.11.0",
+    "handy-tools": "1.13.0",
     "lodash": "^4.17.11",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-modal": "^3.6.1",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-thunk": "^2.3.0",
