--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "redux-thunk": "^2.3.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
+  },
+  "engines": {
+    "node": "^6.11.5",
+    "npm": "3.10.10"
   }
 }
