--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-preset-es2015-without-strict": "0.0.4",
     "babel-preset-react": "^6.24.1",
     "handy-tools": "1.14.0",
+    "jquery": "^3.3.1",
+    "jquery-match-height": "^0.7.2",
     "lodash": "^4.17.11",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
