--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "heroku-postbuild": "webpack --mode production"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
     "babel-preset-es2015-without-strict": "0.0.4",
-    "babel-preset-react": "^6.24.1",
-    "change-case": "^3.0.2",
+    "babel-preset-react": "6.24.1",
+    "change-case": "3.1.0",
     "handy-tools": "1.26.0",
-    "jquery": "^3.3.1",
-    "jquery-match-height": "^0.7.2",
-    "lodash": "^4.17.11",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-modal": "^3.6.1",
-    "react-redux": "5.0.7",
-    "redux": "4.0.0",
-    "redux-thunk": "^2.3.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "jquery": "3.3.1",
+    "jquery-match-height": "0.7.2",
+    "lodash": "4.17.11",
+    "react": "16.8.4",
+    "react-dom": "16.8.4",
+    "react-modal": "3.8.1",
+    "react-redux": "6.0.1",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0"
   },
   "engines": {
     "node": "10.9.0"
