--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "url": "git+https://github.com/plemiszki/flash-cards.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development --watch",
-    "heroku-postbuild": "webpack --mode production"
+    "heroku-postbuild": "webpack --config webpack.config.prod.js"
   },
   "dependencies": {
     "@babel/core": "7.4.0",
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.5",
     "change-case": "3.1.0",
-    "handy-tools": "1.26.0",
+    "handy-tools": "1.26.1",
     "jquery": "3.3.1",
     "jquery-match-height": "0.7.2",
     "lodash": "4.17.11",
