--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.5",
     "change-case": "3.1.0",
+    "handy-components": "1.0.4",
     "handy-tools": "1.26.1",
     "jquery": "3.3.1",
     "jquery-match-height": "0.7.2",
