--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.5",
     "change-case": "3.1.0",
-    "handy-components": "^1.13.0",
+    "handy-components": "1.14.1",
     "handy-tools": "2.1.4",
-    "jquery": "3.3.1",
+    "jquery": "3.4.0",
     "jquery-match-height": "0.7.2",
     "lodash": "4.17.11",
     "react": "16.8.4",
