--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "babel-loader": "8.0.5",
     "change-case": "3.1.0",
     "handy-components": "3.9.0",
-    "handy-tools": "2.6.3",
     "jquery": "3.5.0",
     "jquery-match-height": "0.7.2",
     "lodash": "4.17.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "3.15.1",
-    "webpack": "4.29.6",
-    "webpack-cli": "^3.3.12"
+    "styled-jsx": "5.0.7",
+    "webpack": "5.75.0",
+    "webpack-cli": "4.10.0"
   },
   "engines": {
-    "node": "16.14.2"
+    "node": "19.5.0"
   }
 }
