--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
     "dev": "webpack --watch"
   },
   "dependencies": {
-    "@babel/core": "7.4.0",
-    "@babel/preset-react": "7.0.0",
-    "babel-loader": "8.0.5",
-    "change-case": "3.1.0",
-    "handy-components": "3.10.9",
-    "jquery": "3.5.0",
-    "jquery-match-height": "0.7.2",
-    "lodash": "4.17.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-modal": "3.15.1",
-    "styled-jsx": "5.0.7",
-    "webpack": "5.85.0",
-    "webpack-cli": "4.10.0"
+    "@babel/core": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^9.0.0",
+    "change-case": "^4.0.0",
+    "handy-components": "^3.0.0",
+    "jquery": "^3.0.0",
+    "jquery-match-height": "^0.7.2",
+    "lodash": "^4.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-modal": "^3.0.0",
+    "styled-jsx": "^5.0.0",
+    "title-case": "^3.0.0",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^5.0.0"
   },
   "engines": {
-    "node": "20.2.0"
+    "node": "20.5.0"
   }
 }
